--- a/ai/package.json
+++ b/ai/package.json
@@ -1,6 +1,7 @@
 {
   "name": "openai",
   "version": "1.0.0",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
@@ -11,9 +12,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@ezkljs/engine": "^17.0.0",
+    "@primuslabs/zktls-core-sdk": "^0.1.0",
     "@reclaimprotocol/js-sdk": "^2.1.3",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "ezkl": "^1.0.5",
     "openai": "^4.78.1"
   },
   "devDependencies": {
