--- a/simple-price-oracle-avs-rust-example/Validation_Service/Cargo.toml
+++ b/simple-price-oracle-avs-rust-example/Validation_Service/Cargo.toml
@@ -1,16 +1,16 @@
 [package]
-name = "Execution_Service"
+name = "Validation_Service"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
 actix-web = "4.9.0"
 dotenv = "0.15.0"
-reqwest = { version = "0.11", features = ["json"] }
+warp = "0.3"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-tokio = { version = "1", features = ["full"] }
+log = "0.4"
+env_logger = "0.9"
 web3 = "0.15"
-secp256k1 = "0.11"
-ethabi = "15.0.0"
-hex = "0.4"
+reqwest = { version = "0.11", features = ["json"] }
+
