--- a/simple-price-oracle-avs-rust-example/Validation_Service/Dockerfile
+++ b/simple-price-oracle-avs-rust-example/Validation_Service/Dockerfile
@@ -1,15 +1,23 @@
-# Use the official Rust image from Docker Hub as the base image
-FROM rust:latest as builder
-
-# Set the working directory in the container
+FROM lukemathwalker/cargo-chef:latest as chef
 WORKDIR /app
 
+FROM chef AS planner
+COPY ./Cargo.toml ./Cargo.lock ./
+COPY ./src ./src
+RUN cargo chef prepare
+
+FROM chef AS builder
+COPY --from=planner /app/recipe.json .
+RUN cargo chef cook --release
 COPY . .
-
 RUN cargo build --release
+RUN mv ./target/release/Validation_Service ./app
 
-# Expose the application port
-EXPOSE 8080
-
-# Run the binary
-CMD ["./target/debug/Validation_Service"]
+FROM debian:stable-slim AS runtime
+RUN apt-get update && apt-get install -y \
+    libssl3 \
+    ca-certificates \
+    && rm -rf /var/lib/apt/lists/*
+WORKDIR /app
+COPY --from=builder /app /usr/local/bin/
+ENTRYPOINT ["/usr/local/bin/app"]
