--- a/simple-price-oracle-avs-rust-example/Execution_Service/Cargo.toml
+++ b/simple-price-oracle-avs-rust-example/Execution_Service/Cargo.toml
@@ -15,3 +15,5 @@ secp256k1 = "0.11"
 ethabi = "15.0.0"
 hex = "0.4"
 ethers = "2.0"
+alloy = { version = "0.11.0", features = ["full"] }
+alloy-sol-types = "0.8.19"
